Bug fix, add JavaDoc